# aws-practice

./: README.md
data-infrastructure/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data-infrastructure/app/aws/: base.py  dynamodb.py  firehose.py  s3.py
data-infrastructure/docs/: avro.md  note.md  polling.md  tasks.md  可用性availability.md
data-infrastructure/docs/aws/: aws-cli.md  cloudformation.md  credential.md  dynamodb.md  kinesis.md  lambda.md  s3-trigger-lambda.md  sam.md  sqs.md  tips.md  tutorial-cloudformation.md  vpc.md
data-infrastructure/docs/playground/: contents.avro  example.avsc  main.py  read.py
data-infrastructure/output/: clean.json  pets-2-2020-11-05-01-12-07-c825ff65-809e-4fc8-a7ff-7d1d9505cbbd-copy  pets-2-2020-11-05-06-39-16-d1c20b22-b2c5-4e79-b509-c7764e3787cd  success-pets-2-2020-11-05-08-44-22-32b8395a-44a6-408e-9133-521f4c8772ea.avro  success-test-enjou-dynamodb-to-s3-1-2020-11-06-02-14-01-3bbcb815-bb9c-4e2c-aac8-77d5a0e7a3db  test-cloudwatch-logs-to-s3-2-2020-11-06-05-03-49-20e68c01-23fb-4451-9d19-03cd3e48ccd4  true-pets-2-2020-11-05-06-41-48-e1cef5da-2b18-4f77-a408-194f08bade1f
data-infrastructure/pipeline/dynamodb-to-firehose/: README.md  batch_writing.py  delete-stack.sh  deploy.sh  note.md  template.yaml
data-infrastructure/pipeline/pipeline-introduction/: batch_writing_dynamodb.py  create-service.sh
data-infrastructure/pipeline/subscription-filter-test-cloudwatch-logs-to-s3/: PermissionsForCWL.json  PermissionsForFirehose.json  README.md  TrustPolicyForFirehose.json  stream.md
(+110 files in other folders)
