[tool.poetry]
name = "data-infrastructure"
version = "0.1.0"
description = ""
authors = ["nukopy <pytwbf201830@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.16.10"
ipython = "^7.19.0"
avro-python3 = "^1.10.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
